메타데이터 추가

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
+title: Witch's Archive
 layout: data.html
 showSidebar: false
 ---
+
+<link rel="stylesheet" href="/main.css" />
 
 <blockquote>
   <p>
@@ -19,18 +22,18 @@ showSidebar: false
 <p class="subtitle">도구를 마법처럼 바라보지 않기</p>
 
 <aside class="stats">
-  <dl class="stats-grid">
+  <dl class="stats-container">
     <div class="stat-item">
       <dt class="stat-number">47</dt>
-      <dd>TIL</dd>
+      <dd class="stat-">TIL 기록</dd>
     </div>
     <div class="stat-item">
       <dt class="stat-number">12</dt>
-      <dd>Posts</dd>
+      <dd>좋은 글 스크랩</dd>
     </div>
     <div class="stat-item">
       <dt class="stat-number">12</dt>
-      <dd>Bookmarks</dd>
+      <dd>독서 기록</dd>
     </div>
   </dl>
 </aside>
