breadcrumb 구조 형성

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 title: Witch's Archive
-layout: data.html
-showSidebar: false
+layout: main.html
 ---
 
 <link rel="stylesheet" href="/main.css" />
@@ -10,30 +9,22 @@ showSidebar: false
   <p>
     그들은 다음과 같이 물었다. 이 길에서 이제 가야 할 곳은 어디인가? 케이는 그
     질문을 다음과 같이 뒤집었다. 우리가 가고 싶은 곳이 어딘지 찾자. 그러면 그
-    답이 그곳에 가는 방법을 보여줄 것이다.
+    답이 그곳에 가는 방법을 보여줄 것이다. 그는 컴퓨터가 세상에서 어디로 가야
+    하는지에 대한 관점을 결코 놓친 적이 없었다. 그것은 사용자가 원하는 것을
+    따르는 것이다. 컴퓨터가 원하는 것을 사용자가 따르는 것이 아니었다.
   </p>
 </blockquote>
 <p>
   - 마이클 A. 힐트직 지음, 이재범 옮김, <cite>제록스 팔로알토 연구소</cite>,
-  129p
+  129p, 앨런 케이의 사상에 관하여
 </p>
+<p>도구를 마법처럼 여기지 않기를.</p>
 
-<h1>Witch's Archive</h1>
-<p class="subtitle">도구를 마법처럼 바라보지 않기</p>
-
-<aside class="stats">
-  <dl class="stats-container">
-    <div class="stat-item">
-      <dt class="stat-number">47</dt>
-      <dd class="stat-">TIL 기록</dd>
-    </div>
-    <div class="stat-item">
-      <dt class="stat-number">12</dt>
-      <dd>좋은 글 스크랩</dd>
-    </div>
-    <div class="stat-item">
-      <dt class="stat-number">12</dt>
-      <dd>독서 기록</dd>
-    </div>
-  </dl>
-</aside>
+<dl>
+  <dt>47</dt>
+  <dd>TIL 기록</dd>
+  <dt>12</dt>
+  <dd>좋은 글 스크랩</dd>
+  <dt>12</dt>
+  <dd>독서 기록</dd>
+</dl>
