간단한 자기소개 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@ layout: main.html
   - 마이클 A. 힐트직 지음, 이재범 옮김, <cite>제록스 팔로알토 연구소</cite>,
   129p, 앨런 케이의 사상에 관하여
 </p>
-<p>도구를 마법처럼 여기지 않기를.</p>
+<p>
+  "마녀"라는 닉네임으로 활동하는 김성현입니다.
+  <a href="https://witch.work/">블로그</a>를 운영하고 있으며 다른 이력은
+  <a href="https://github.com/witch-factory">GitHub</a>에서 찾아보실 수
+  있습니다. 도구에 불과한 것들을 마법처럼 여기지 않고, 파악하고 사용하는 자세를
+  가지려고 노력합니다.
+</p>
 
 <h2>Contents</h2>
 
