--- a/index.html
+++ b/index.html
@@ -25,18 +25,32 @@ layout: main.html
 </p>
 
 <h2>Contents</h2>
+<p>
+  좋은 글 스크랩, 수학 공부 메모, 배운 내용들과 읽은 책들에 대한 메모를
+  저장합니다. 이후에 정리하고 취합하여 블로그에 올릴 만한 컨텐츠까지 생산하는 걸
+  목표로 합니다.
+</p>
 
 <nav>
+  <h3>약간 정리된 메모들</h3>
+
+  <ul>
+    {% for memo in collections.study %}
+    <li>
+      <a href="{{ memo.url }}">{{ memo.data.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
   <details>
     <summary>
-      2025년의 공부 내용
-      <span>({{ collections.study2025.length }})</span>
+      배우는 대로 쓰는 메모
+      <span>({{ collections.daily.length }})</span>
     </summary>
 
     <ul>
-      {% for study in collections.study2025 %}
+      {% for daily in collections.daily %}
       <li>
-        <a href="{{ study.url }}">{{ study.data.title }}</a>
+        <a href="{{ daily.url }}">{{ daily.data.title }}</a>
       </li>
       {% endfor %}
     </ul>
@@ -79,6 +93,24 @@ layout: main.html
 
     <p>
       <a href="/books/">책 목록 페이지로 이동</a>
+    </p>
+  </details>
+  <details>
+    <summary>
+      수학 공부 메모
+      <span>({{ collections.math.length }})</span>
+    </summary>
+
+    <ul>
+      {% for math in collections.math %}
+      <li>
+        <a href="{{ math.url }}">{{ math.data.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+
+    <p>
+      <a href="/math/">수학 공부 메모 목록 페이지로 이동</a>
     </p>
   </details>
 </nav>
